[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://SpaceShooterRedux/Backgrounds/darkPurple.png" type="Texture" id=2]
[ext_resource path="res://Enemy_Spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://SpaceShooterRedux/Button - Copy.png" type="Texture" id=5]
[ext_resource path="res://SpaceShooterRedux/Button - Copy (2).png" type="Texture" id=6]
[ext_resource path="res://SpaceShooterRedux/Bonus/kenvector_future_thin.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://SpaceShooterRedux/Bonus/kenvector_future.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 8 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Spawner" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="Controls" type="CanvasLayer" parent="."]

[node name="Left" type="TouchScreenButton" parent="Controls"]
position = Vector2( 3, 736 )
scale = Vector2( 2.46602, 2.46602 )
normal = ExtResource( 5 )
action = "left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="Controls"]
position = Vector2( 294, 730 )
scale = Vector2( 2.47899, 2.47899 )
normal = ExtResource( 6 )
action = "right"
visibility_mode = 1

[node name="HUD" type="CanvasLayer" parent="."]

[node name="StartButton" type="Button" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 112.0
margin_right = 54.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="Name" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -40.0
margin_right = 298.0
margin_bottom = 40.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 2 )
text = "Spingun"
align = 1
valign = 1

[node name="Score" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 41.0
margin_right = 20.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="Lives" type="Sprite" parent="HUD"]
position = Vector2( 300, 150 )
scale = Vector2( 0.6, 0.6 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="pressed" from="HUD/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
